gen/AngularParser.java
// Generated from C:/Users/Michael/Desktop/Compiler/AngularParser.g4 by ANTLR 4.13.2
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AngularParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMPONENT=1, CLASS=2, CONSTRUCTOR=3, SEMICOLON=4, COLON=5, BACKTICK=6, 
		FUNCTION=7, ASSIGN=8, NOT=9, EQUAL=10, NOT_EQUAL=11, EQUALS_OR_LESS_THAN=12, 
		EQAULS_OR_GREATER_THAN=13, STRICT_EQUALITY=14, STRICT_INEQUALITY=15, HASHTAG=16, 
		SQUARE_OPEN_BRACKET=17, SQUARE_CLOSE_BRACKET=18, NUMBER_VALUE=19, BOOLEAN_VALUE=20, 
		STRING_VALUE=21, COMMA=22, OPEN_PAREN=23, CLOSE_PAREN=24, OPEN_BRACE=25, 
		CLOSE_BRACE=26, LESS_THAN=27, GREATER_THAN=28, DOT=29, DOLLAR=30, AT=31, 
		REST_OPERATOR=32, INCREASE=33, DECREASE=34, NULL=35, ARRAY=36, LOG=37, 
		STRING=38, BOOLEAN=39, NUMBER=40, VOID=41, ANY=42, PLUS=43, MINUS=44, 
		PIPE_OPERATOR=45, LOGICAL_AND=46, LOGICAL_OR=47, DIVIDE=48, MODULUS=49, 
		MULTIPLY=50, POWER=51, MULTIPLICATION_ASSIGNMENT=52, DIVISION_ASSIGNMENT=53, 
		ADDITION_ASSIGNMENT=54, SUBTRACTION_ASSIGNMENT=55, QUESTION_MARK=56, NULLISH_COALESCING=57, 
		IMPORT=58, LET=59, EXPORT=60, FROM=61, FOR=62, WHILE=63, DO=64, IF=65, 
		ELSE=66, SWITCH=67, BREAK=68, CONTINUE=69, RETURN=70, CASE=71, CONSOLE=72, 
		CONST=73, IMPLEMENTS=74, EXTENDS=75, PUBLIC=76, PRIVATE=77, PROTECTED=78, 
		READ_ONLY=79, ARROW=80, VAR=81, AS=82, THIS=83, IMPORTS=84, STYLES=85, 
		OF=86, TRACK=87, DEFAULT=88, TRY=89, CATCH=90, FINALLY=91, IDENTIFIER=92, 
		HTML_COMMENT=93, LINE_COMMENT=94, BLOCK_COMMENT=95, SPACE=96;
	public static final int
		RULE_page = 0, RULE_imports = 1, RULE_component = 2, RULE_componentBody = 3, 
		RULE_componentImport = 4, RULE_componentStyles = 5, RULE_styleElements = 6, 
		RULE_styleElementsBody = 7, RULE_htmlBlock = 8, RULE_htmlElement = 9, 
		RULE_htmlElementProperties = 10, RULE_htmlElementContent = 11, RULE_tsxBlock = 12, 
		RULE_operation = 13, RULE_forStatement = 14, RULE_ifStatement = 15, RULE_class = 16, 
		RULE_classBody = 17, RULE_array = 18, RULE_arrayMethod = 19, RULE_arrayBody = 20, 
		RULE_object = 21, RULE_objectBody = 22, RULE_var = 23, RULE_stringVar = 24, 
		RULE_boolVar = 25, RULE_numVar = 26, RULE_anyVar = 27, RULE_function = 28, 
		RULE_parameter = 29, RULE_dataType = 30, RULE_bodyStatement = 31, RULE_forLoop = 32, 
		RULE_functionCall = 33, RULE_return = 34, RULE_ifCondition = 35, RULE_condition = 36, 
		RULE_multiOperation = 37, RULE_console = 38, RULE_modifiers = 39, RULE_constructor = 40, 
		RULE_constructorBody = 41;
	private static String[] makeRuleNames() {
		return new String[] {
			"page", "imports", "component", "componentBody", "componentImport", "componentStyles", 
			"styleElements", "styleElementsBody", "htmlBlock", "htmlElement", "htmlElementProperties", 
			"htmlElementContent", "tsxBlock", "operation", "forStatement", "ifStatement", 
			"class", "classBody", "array", "arrayMethod", "arrayBody", "object", 
			"objectBody", "var", "stringVar", "boolVar", "numVar", "anyVar", "function", 
			"parameter", "dataType", "bodyStatement", "forLoop", "functionCall", 
			"return", "ifCondition", "condition", "multiOperation", "console", "modifiers", 
			"constructor", "constructorBody"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Component'", "'class'", "'constructor'", "';'", "':'", "'`'", 
			"'function'", "'='", "'!'", "'=='", "'!='", "'<='", "'>='", "'==='", 
			"'!=='", "'#'", "'['", "']'", null, null, null, "','", "'('", "')'", 
			"'{'", "'}'", "'<'", "'>'", "'.'", "'$'", "'@'", "'...'", "'++'", "'--'", 
			"'null'", "'Array'", "'log'", "'string'", "'boolean'", "'number'", "'void'", 
			"'any'", "'+'", "'-'", "'|'", "'&&'", "'||'", "'/'", "'%'", "'*'", "'**'", 
			"'*='", "'/='", "'+='", "'-='", "'?'", "'??'", "'import'", "'let'", "'export'", 
			"'from'", "'for'", "'while'", "'do'", "'if'", "'else'", "'switch'", "'break'", 
			"'continue'", "'return'", "'case'", "'console'", "'const'", "'implements'", 
			"'extends'", "'public'", "'private'", "'protected'", "'readonly'", "'=>'", 
			"'var'", "'as'", "'this'", "'imports'", "'styles'", "'of'", "'track'", 
			"'default'", "'try'", "'catch'", "'finally'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMPONENT", "CLASS", "CONSTRUCTOR", "SEMICOLON", "COLON", "BACKTICK", 
			"FUNCTION", "ASSIGN", "NOT", "EQUAL", "NOT_EQUAL", "EQUALS_OR_LESS_THAN", 
			"EQAULS_OR_GREATER_THAN", "STRICT_EQUALITY", "STRICT_INEQUALITY", "HASHTAG", 
			"SQUARE_OPEN_BRACKET", "SQUARE_CLOSE_BRACKET", "NUMBER_VALUE", "BOOLEAN_VALUE", 
			"STRING_VALUE", "COMMA", "OPEN_PAREN", "CLOSE_PAREN", "OPEN_BRACE", "CLOSE_BRACE", 
			"LESS_THAN", "GREATER_THAN", "DOT", "DOLLAR", "AT", "REST_OPERATOR", 
			"INCREASE", "DECREASE", "NULL", "ARRAY", "LOG", "STRING", "BOOLEAN", 
			"NUMBER", "VOID", "ANY", "PLUS", "MINUS", "PIPE_OPERATOR", "LOGICAL_AND", 
			"LOGICAL_OR", "DIVIDE", "MODULUS", "MULTIPLY", "POWER", "MULTIPLICATION_ASSIGNMENT", 
			"DIVISION_ASSIGNMENT", "ADDITION_ASSIGNMENT", "SUBTRACTION_ASSIGNMENT", 
			"QUESTION_MARK", "NULLISH_COALESCING", "IMPORT", "LET", "EXPORT", "FROM", 
			"FOR", "WHILE", "DO", "IF", "ELSE", "SWITCH", "BREAK", "CONTINUE", "RETURN", 
			"CASE", "CONSOLE", "CONST", "IMPLEMENTS", "EXTENDS", "PUBLIC", "PRIVATE", 
			"PROTECTED", "READ_ONLY", "ARROW", "VAR", "AS", "THIS", "IMPORTS", "STYLES", 
			"OF", "TRACK", "DEFAULT", "TRY", "CATCH", "FINALLY", "IDENTIFIER", "HTML_COMMENT", 
			"LINE_COMMENT", "BLOCK_COMMENT", "SPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AngularParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AngularParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PageContext extends ParserRuleContext {
		public List<ImportsContext> imports() {
			return getRuleContexts(ImportsContext.class);
		}
		public ImportsContext imports(int i) {
			return getRuleContext(ImportsContext.class,i);
		}
		public List<ComponentContext> component() {
			return getRuleContexts(ComponentContext.class);
		}
		public ComponentContext component(int i) {
			return getRuleContext(ComponentContext.class,i);
		}
		public List<ClassContext> class_() {
			return getRuleContexts(ClassContext.class);
		}
		public ClassContext class_(int i) {
			return getRuleContext(ClassContext.class,i);
		}
		public PageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_page; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterPage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitPage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitPage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PageContext page() throws RecognitionException {
		PageContext _localctx = new PageContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_page);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(84);
				imports();
				}
				}
				setState(87); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IMPORT );
			setState(90); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(89);
				component();
				}
				}
				setState(92); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==AT );
			setState(95); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(94);
				class_();
				}
				}
				setState(97); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==EXPORT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportsContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(AngularParser.IMPORT, 0); }
		public TerminalNode OPEN_BRACE() { return getToken(AngularParser.OPEN_BRACE, 0); }
		public TerminalNode CLOSE_BRACE() { return getToken(AngularParser.CLOSE_BRACE, 0); }
		public TerminalNode FROM() { return getToken(AngularParser.FROM, 0); }
		public TerminalNode STRING_VALUE() { return getToken(AngularParser.STRING_VALUE, 0); }
		public TerminalNode SEMICOLON() { return getToken(AngularParser.SEMICOLON, 0); }
		public TerminalNode COMPONENT() { return getToken(AngularParser.COMPONENT, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(AngularParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(AngularParser.IDENTIFIER, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(AngularParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AngularParser.COMMA, i);
		}
		public ImportsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imports; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterImports(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitImports(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitImports(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportsContext imports() throws RecognitionException {
		ImportsContext _localctx = new ImportsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_imports);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(IMPORT);
			setState(100);
			match(OPEN_BRACE);
			setState(101);
			_la = _input.LA(1);
			if ( !(_la==COMPONENT || _la==IDENTIFIER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(102);
				match(COMMA);
				setState(103);
				match(IDENTIFIER);
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(109);
			match(CLOSE_BRACE);
			setState(110);
			match(FROM);
			setState(111);
			match(STRING_VALUE);
			setState(112);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentContext extends ParserRuleContext {
		public TerminalNode AT() { return getToken(AngularParser.AT, 0); }
		public TerminalNode COMPONENT() { return getToken(AngularParser.COMPONENT, 0); }
		public TerminalNode OPEN_PAREN() { return getToken(AngularParser.OPEN_PAREN, 0); }
		public TerminalNode OPEN_BRACE() { return getToken(AngularParser.OPEN_BRACE, 0); }
		public ComponentBodyContext componentBody() {
			return getRuleContext(ComponentBodyContext.class,0);
		}
		public TerminalNode CLOSE_BRACE() { return getToken(AngularParser.CLOSE_BRACE, 0); }
		public TerminalNode CLOSE_PAREN() { return getToken(AngularParser.CLOSE_PAREN, 0); }
		public TerminalNode COMMA() { return getToken(AngularParser.COMMA, 0); }
		public ComponentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_component; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterComponent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitComponent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitComponent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentContext component() throws RecognitionException {
		ComponentContext _localctx = new ComponentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_component);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(AT);
			setState(115);
			match(COMPONENT);
			setState(116);
			match(OPEN_PAREN);
			setState(117);
			match(OPEN_BRACE);
			setState(118);
			componentBody();
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(119);
				match(COMMA);
				}
			}

			setState(122);
			match(CLOSE_BRACE);
			setState(123);
			match(CLOSE_PAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentBodyContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(AngularParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(AngularParser.IDENTIFIER, i);
		}
		public List<TerminalNode> COLON() { return getTokens(AngularParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(AngularParser.COLON, i);
		}
		public List<TerminalNode> STRING_VALUE() { return getTokens(AngularParser.STRING_VALUE); }
		public TerminalNode STRING_VALUE(int i) {
			return getToken(AngularParser.STRING_VALUE, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(AngularParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AngularParser.COMMA, i);
		}
		public List<TerminalNode> BACKTICK() { return getTokens(AngularParser.BACKTICK); }
		public TerminalNode BACKTICK(int i) {
			return getToken(AngularParser.BACKTICK, i);
		}
		public HtmlBlockContext htmlBlock() {
			return getRuleContext(HtmlBlockContext.class,0);
		}
		public ComponentStylesContext componentStyles() {
			return getRuleContext(ComponentStylesContext.class,0);
		}
		public ComponentImportContext componentImport() {
			return getRuleContext(ComponentImportContext.class,0);
		}
		public ComponentBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterComponentBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitComponentBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitComponentBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentBodyContext componentBody() throws RecognitionException {
		ComponentBodyContext _localctx = new ComponentBodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_componentBody);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(125);
			match(IDENTIFIER);
			setState(126);
			match(COLON);
			setState(127);
			match(STRING_VALUE);
			}
			setState(135);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(129);
					match(COMMA);
					setState(130);
					match(IDENTIFIER);
					setState(131);
					match(COLON);
					setState(132);
					match(STRING_VALUE);
					}
					} 
				}
				setState(137);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(145);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(138);
				match(COMMA);
				setState(139);
				match(IDENTIFIER);
				setState(140);
				match(COLON);
				setState(141);
				match(BACKTICK);
				setState(142);
				htmlBlock();
				setState(143);
				match(BACKTICK);
				}
				break;
			}
			setState(149);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(147);
				match(COMMA);
				setState(148);
				componentStyles();
				}
				break;
			}
			setState(153);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(151);
				match(COMMA);
				setState(152);
				componentImport();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentImportContext extends ParserRuleContext {
		public TerminalNode IMPORTS() { return getToken(AngularParser.IMPORTS, 0); }
		public TerminalNode COLON() { return getToken(AngularParser.COLON, 0); }
		public TerminalNode SQUARE_OPEN_BRACKET() { return getToken(AngularParser.SQUARE_OPEN_BRACKET, 0); }
		public TerminalNode SQUARE_CLOSE_BRACKET() { return getToken(AngularParser.SQUARE_CLOSE_BRACKET, 0); }
		public TerminalNode COMPONENT() { return getToken(AngularParser.COMPONENT, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(AngularParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(AngularParser.IDENTIFIER, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(AngularParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AngularParser.COMMA, i);
		}
		public ComponentImportContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentImport; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterComponentImport(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitComponentImport(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitComponentImport(this);
			else return visitor.visitChildren(this);
		}
	}
